--- a/css/default.css
+++ b/css/default.css
@@ -18,5 +18,8 @@ header{
  background-color: yellow;
 }
 aside{
- background-color: #eecc99;
+ background-color: #114433;
+}
+footer{
+ background-color: skyblue;
 }
