--- a/css/default.css
+++ b/css/default.css
@@ -14,15 +14,19 @@ header{
 #main1{
  background-color: orange;
  width: 500px;
+ float: left;
 }
 #main2{
  background-color: yellow;
  width: 500px;
+ float: left;
 }
 aside{
  background-color: #114433;
- width: 500px;
+ width: 200px;
+ float: right;
 }
 footer{
  background-color: skyblue;
+ clear: both;
 }
