--- a/css/default.css
+++ b/css/default.css
@@ -18,16 +18,14 @@ header{
  float: left;
 }
 
-#main1{
+.box{
  background-color: orange;
- width: 500px;
+ color: black;
+ width: 240px;
+ margin: 5px;
  float: left;
 }
-#main2{
- background-color: yellow;
- width: 500px;
- float: left;
-}
+
 aside{
  background-color: #114433;
  width: 200px;
