--- a/css/default.css
+++ b/css/default.css
@@ -38,6 +38,9 @@ aside{
  background-color: #114433;
  width: 200px;
  float: right;
+ position: relative;
+ top: 20px;
+ right: 10px;
 }
 footer{
  background-color: skyblue;
